build artifact with java 8